It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Thu, Apr 2, 2009
---------------------------------------------------------------------
- Added view specs for task#destroy, fixed a couple task related bugs.
- Refactored view specs.

Wed, Apr 1, 2009
---------------------------------------------------------------------
- Finished [Edit Lead] views and view specs.
- Started with [Edit Task] form and related views.
- Refactored create, edit, and complete task views and created the specs.

Tue, Mar 31, 2009
---------------------------------------------------------------------
- More work on [Edit Lead] views and specs.

Mon, Mar 30, 2009
---------------------------------------------------------------------
- More work on [Edit Lead] form (leads controller and its specs).

Sun, Mar 29, 2009
---------------------------------------------------------------------
- Finished with [Edit Campaign] including controller and view specs.

Sat, Mar 28, 2009
---------------------------------------------------------------------
- Fixed updating permissions bug in [uses_user_permissions] plugin.
- Fixed editing shared permissions for opportunities, contacts, and accounts.

Thu, Mar 26, 2009
---------------------------------------------------------------------
- Refactored custom Rails initializers and added custom date format.
- Finished with [Edit Opportunity] including full controller and views specs.
- Fixed JavaScript bug caused by not wiping out hidden create form.
- Use String#shorten instead of truncate() helper.

Wed, Mar 25, 2009
---------------------------------------------------------------------
- More work on [Edit Opportunity] and its specs.

Tue, Mar 24, 2009
---------------------------------------------------------------------
- Finished with [Edit Contacts] including full controller and views specs.

Mon, Mar 23, 2009